Update package.json to correct version number and add author, license, and repository information

--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
     "name": "synth",
-    "version": "0.1.0",
+    "version": "0.0.1",
     "private": true,
+    "author": {
+        "name": "Alexander A. Guerra",
+        "email": "alexander.a.guerra@gmail.com"
+    },
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/alexguerra-dev/synth.git"
+    },
     "scripts": {
         "dev": "next dev",
         "build": "next build",
